--- a/app/views/pension_insurances/_elements.html.erb
+++ b/app/views/pension_insurances/_elements.html.erb
@@ -1,20 +1,37 @@
 <% @database_page.each do |pension_insurance| %>
   <div class="card-bdd">
-    <div class="front">
-      <div class="card-bdd-container">
-        <div class="text-center"><%= pension_insurance.address %></div>
+    <div class="flip-container">
+      <div class="front">
+        <div class="content-bdd">
+          <div class="text-center"><%= pension_insurance.address %></div>
+        </div>
       </div>
-    </div>
-    <div class="back">
-      <div class="card-bdd-container">
-        <div class="line"><i class="fas fa-map-marker-alt"></i><%= pension_insurance.fax %></div>
-        <div class="line"><i class="fas fa-phone-alt"></i><%= pension_insurance.phone %></div>
-        <div class="line"><i class="fas fa-laptop-code"></i></i><%= pension_insurance.website.present? ? pension_insurance.website : 'site web non renseigné' %></div>
-        <div class="card-db-action">
-          <%= link_to edit_pension_insurance_path(pension_insurance), class: "card-db-edit" do %>
-            <i class='fas fa-pencil-alt'></i>
-          <% end %>
-          <%= link_to "x", destroy_pension_insurance_path(pension_insurance), class: "card-db-delete", method: :post, data: { confirm: "Êtes-vous sûr de vouloir supprimer cet élément ?"} %>
+      <div class="back">
+        <div class="content-bdd">
+          <div class="line">
+            <i class="fas fa-map-marker-alt logo-bdd"></i>
+            <div class="line-text">
+              <%= pension_insurance.fax %>
+            </div>
+          </div>
+          <div class="line">
+            <i class="fas fa-phone-alt logo-bdd"></i>
+            <div class="line-text">
+              <%= pension_insurance.phone %>
+            </div>
+          </div>
+          <div class="line">
+            <i class="fas fa-laptop-code logo-bdd"></i></i>
+            <div class="line-text">
+              <%= pension_insurance.website.present? ? pension_insurance.website : 'site web non renseigné' %>
+            </div>
+          </div>
+          <div class="card-db-action">
+            <%= link_to edit_pension_insurance_path(pension_insurance), class: "card-db-edit" do %>
+              <i class='fas fa-pencil-alt'></i>
+            <% end %>
+            <%= link_to "x", destroy_pension_insurance_path(pension_insurance), class: "card-db-delete", method: :post, data: { confirm: "Êtes-vous sûr de vouloir supprimer cet élément ?"} %>
+          </div>
         </div>
       </div>
     </div>
