--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -88,81 +88,160 @@
 }
 
 .card-bdd {
-  position: relative;
+  perspective: 1000px;
+  padding: 12px;
   width: 250px;
   height: 150px;
-  border-radius: 20px;
-  > .front,
-  > .back {
-    display: block;
-    transition-timing-function: cubic-bezier(0.175, 0.885, 0.32, 1.275);
-    transition-duration: 1s, 0.5s;
-    transition-property: transform, opacity;
-    height: inherit;
-    padding: 0 10px;
-    border-radius: inherit;
-    border: 2px solid $blue-dark;
-    background-color: $gray-light;
+  /* Do an horizontal flip when you move the mouse over the flip box container */
+  &:hover .flip-container {
+    transform: rotateY(180deg);
   }
-  > .front {
-    transform: rotateY(0deg);
-  }
-  > .back {
-    position: absolute;
-    top: 0px;
-    left: 0px;
+  /* This container is needed to position the front and back side */
+  .flip-container {
+    position: relative;
     width: 100%;
     height: 100%;
-    opacity: 0;
-    transform: rotateY(-180deg);
-    > .card-bdd-container {
-      padding-top: 20px;
-      align-items: flex-start;
-    }
-  }
-  .card-bdd-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-evenly;
-    height: 100%;
-    position: relative;
-    .card-db-action {
-      display: flex;
-      justify-content: flex-end;
+    text-align: center;
+    transition: transform 0.8s;
+    transform-style: preserve-3d;
+    box-shadow: 0 4px 30px 0px rgba(150, 170, 180, 0.5);
+    border-radius: 16px;
+    /* Position the front and back side */
+    .front,
+    .back {
       position: absolute;
-      top: 5px;
-      right: 5px;
-    }
-    .line {
-      display: -webkit-box;
-      -webkit-line-clamp: 2;
-      -webkit-box-orient: vertical;
-      overflow: hidden;
-      > i {
-        margin-right: 10px;
-      }
-    }
-    .mail {
-      white-space: nowrap;
-      text-overflow: ellipsis;
-      overflow: hidden;
       width: 100%;
-      > i {
-        margin-right: 10px;
-      }
+      height: 100%;
+      -webkit-backface-visibility: hidden; /* Safari */
+      backface-visibility: hidden;
+      transform: rotateX(0deg);
     }
-  }
-  &:hover {
-    > .front {
+    /* Style the front side (fallback if image is missing) */
+    .front {
+      color: black;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+    /* Style the back side */
+    .back {
+      color: black;
+      display: flex;
+      align-items: center;
+      justify-content: center;
       transform: rotateY(180deg);
     }
-    > .back {
-      opacity: 1;
-      transform: rotateY(0deg);
+  }
+  .content-bdd {
+    text-align: center;
+    padding: 8px;
+    width: 100%;
+  }
+  .logo-bdd {
+    margin-right: 6px;
+  }
+  .line {
+    // Handle the ellipsis if there is a lof of text
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    .line-text {
+      text-overflow: ellipsis;
+      white-space: nowrap;
+      width: fit-content;
+      overflow: hidden;
+    }
+  }
+  .card-db-action {
+    display: flex;
+    justify-content: flex-end;
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    .card-db-delete {
+      &:hover {
+        text-decoration: none;
+      }
     }
   }
 }
+
+// .card-bdd {
+//   position: relative;
+//   width: 250px;
+//   height: 150px;
+//   border-radius: 20px;
+//   > .front,
+//   > .back {
+//     display: block;
+//     transition-timing-function: cubic-bezier(0.175, 0.885, 0.32, 1.275);
+//     transition-duration: 1s, 0.5s;
+//     transition-property: transform, opacity;
+//     height: inherit;
+//     padding: 0 10px;
+//     border-radius: inherit;
+//     border: 2px solid $blue-dark;
+//     background-color: $gray-light;
+//   }
+//   > .front {
+//     transform: rotateY(0deg);
+//   }
+//   > .back {
+//     position: absolute;
+//     top: 0px;
+//     left: 0px;
+//     width: 100%;
+//     height: 100%;
+//     opacity: 0;
+//     transform: rotateY(-180deg);
+//     > .card-bdd-container {
+//       padding-top: 20px;
+//       align-items: flex-start;
+//     }
+//   }
+//   .card-bdd-container {
+//     display: flex;
+//     flex-direction: column;
+//     align-items: center;
+//     justify-content: space-evenly;
+//     height: 100%;
+//     position: relative;
+//     .card-db-action {
+//       display: flex;
+//       justify-content: flex-end;
+//       position: absolute;
+//       top: 5px;
+//       right: 5px;
+//     }
+//     .line {
+//       display: -webkit-box;
+//       -webkit-line-clamp: 2;
+//       -webkit-box-orient: vertical;
+//       overflow: hidden;
+//       > i {
+//         margin-right: 10px;
+//       }
+//     }
+//     .mail {
+//       white-space: nowrap;
+//       text-overflow: ellipsis;
+//       overflow: hidden;
+//       width: 100%;
+//       > i {
+//         margin-right: 10px;
+//       }
+//     }
+//   }
+//   &:hover {
+//     > .front {
+//       transform: rotateY(180deg);
+//     }
+//     > .back {
+//       opacity: 1;
+//       transform: rotateY(0deg);
+//     }
+//   }
+// }
 
 .card-info {
   box-shadow: 2px 3px 10px 2px $blue-dark-shadow;
@@ -239,92 +318,6 @@
     flex-direction: column;
     gap: 30px;
     align-items: center;
-  }
-}
-
-@media (max-width: 1019px) {
-  .card-database {
-    width: 300px;
-    padding: 4px;
-    color: black;
-    margin: 6px;
-    border-radius: 8px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    position: relative;
-    box-shadow: 1px 1px 2px 2px $blue-shadow;
-    .card-db-delete {
-      border: none;
-      font-size: 18px;
-      color: $blue-dark;
-      font-weight: 700;
-      margin-left: 6px;
-      &:hover {
-        color: black;
-        text-decoration: none;
-      }
-    }
-    .card-db-edit {
-      border: none;
-      font-size: 18px;
-      color: $blue-dark;
-      font-weight: 700;
-      &:hover {
-        color: black;
-        text-decoration: none;
-      }
-    }
-
-    #spacer {
-      width: 20px;
-      height: 25px;
-      float: right;
-    }
-  }
-}
-
-@media (min-width: 1019px) {
-  .card-database {
-    width: 100%;
-    padding: 4px;
-    color: black;
-    margin: 6px;
-    border-radius: 8px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    box-shadow: 1px 1px 2px 2px $blue-shadow;
-    .card-db-delete {
-      border: none;
-      font-size: 18px;
-      color: $blue-dark;
-      font-weight: 700;
-      margin-left: 6px;
-      &:hover {
-        color: black;
-        text-decoration: none;
-      }
-    }
-    .card-db-edit {
-      border: none;
-      font-size: 18px;
-      color: $blue-dark;
-      font-weight: 700;
-      &:hover {
-        color: black;
-        text-decoration: none;
-      }
-    }
-
-    .db-element {
-      margin-left: 4px;
-      margin-right: 4px;
-    }
-
-    .word-break {
-      word-break: break-all;
-    }
   }
 }
 
