--- a/app/views/anti_poisons/_elements.html.erb
+++ b/app/views/anti_poisons/_elements.html.erb
@@ -1,19 +1,29 @@
 <% @database.each do |anti_poison| %>
   <div class="card-bdd">
-    <div class="front">
-      <div class="card-bdd-container">
-        <div class="text-center"><%= anti_poison.name %></div>
+    <div class="flip-container">
+      <div class="front">
+        <div class="content-bdd"><%= anti_poison.name %></div>
       </div>
-    </div>
-    <div class="back">
-      <div class="card-bdd-container">
-        <div class="line"><i class="fas fa-map-marker-alt"></i><%= anti_poison.address %></div>
-        <div class="line"><i class="fas fa-phone-alt"></i><%= anti_poison.phone %></div>
-        <div class="card-db-action">
-          <%= link_to edit_anti_poison_path(anti_poison), class: "card-db-edit" do %>
-            <i class='fas fa-pencil-alt'></i>
-          <% end %>
-          <%= link_to "x", destroy_anti_poison_path(anti_poison), class: "card-db-delete", method: :post, data: { confirm: "Êtes-vous sûr de vouloir supprimer cet élément ?"} %>
+      <div class="back">
+        <div class="content-bdd">
+          <div class="line">
+          <i class="fas fa-map-marker-alt logo-bdd"></i>
+          <div class="line-text">
+            <%= anti_poison.address %>
+          </div>
+        </div>
+          <div class="line">
+            <i class="fas fa-phone-alt logo-bdd"></i>
+            <div class="line-text">
+              <%= anti_poison.phone %>
+            </div>
+          </div>
+          <div class="card-db-action">
+            <%= link_to edit_anti_poison_path(anti_poison), class: "card-db-edit" do %>
+              <i class='fas fa-pencil-alt'></i>
+            <% end %>
+            <%= link_to "x", destroy_anti_poison_path(anti_poison), class: "card-db-delete", method: :post, data: { confirm: "Êtes-vous sûr de vouloir supprimer cet élément ?"} %>
+          </div>
         </div>
       </div>
     </div>
