--- a/app/views/work_medecines/_elements.html.erb
+++ b/app/views/work_medecines/_elements.html.erb
@@ -1,19 +1,31 @@
 <% @database_page.each do |work_medecine| %>
   <div class="card-bdd">
-    <div class="front">
-      <div class="card-bdd-container">
-        <div class="text-center"><%= work_medecine.fax %></div>
+    <div class="flip-container">
+      <div class="front">
+        <div class="content-bdd">
+          <div class="line"><i class="fas fa-map-marker-alt logo-bdd"></i><%= work_medecine.address %></div>
+        </div>
       </div>
-    </div>
-    <div class="back">
-      <div class="card-bdd-container">
-        <div class="line"><i class="fas fa-map-marker-alt"></i><%= work_medecine.address %></div>
-        <div class="line"><i class="fas fa-phone-alt"></i><%= work_medecine.phone %></div>
-        <div class="card-db-action">
-          <%= link_to edit_work_medecine_path(work_medecine), class: "card-db-edit" do %>
-            <i class='fas fa-pencil-alt'></i>
-          <% end %>
-          <%= link_to "x", destroy_work_medecine_path(work_medecine), class: "card-db-delete", method: :post, data: { confirm: "Êtes-vous sûr de vouloir supprimer cet élément ?"} %>
+      <div class="back">
+        <div class="content-bdd">
+          <div class="line">
+            <i class="fas fa-fax logo-bdd"></i>
+            <div class="line-text">
+              <%= work_medecine.fax %>
+            </div>
+          </div>
+          <div class="line">
+            <i class="fas fa-phone-alt logo-bdd"></i>
+            <div class="line-text">
+              <%= work_medecine.phone %>
+            </div>
+          </div>
+          <div class="card-db-action">
+            <%= link_to edit_work_medecine_path(work_medecine), class: "card-db-edit" do %>
+              <i class='fas fa-pencil-alt'></i>
+            <% end %>
+            <%= link_to "x", destroy_work_medecine_path(work_medecine), class: "card-db-delete", method: :post, data: { confirm: "Êtes-vous sûr de vouloir supprimer cet élément ?"} %>
+          </div>
         </div>
       </div>
     </div>
