Start testing API

--- a/app/views/ppsps/_form.html.erb
+++ b/app/views/ppsps/_form.html.erb
@@ -452,7 +452,7 @@
       <% end %>
 
 
-      <div class="d-flex justify-content-center mt-5">
+      <div class="d-flex justify-content-center mt-5" style='width: 100%'>
         <%= f.button :button, "J'ai terminé", class: 'btn-blue', data: { disable_with: '<i class="fas fa-spin fa-spinner"></i> En cours...'.html_safe }, id: 'SubmitPpspsFormBtn' %>
       </div>
     </div>
