--- a/app/views/ppsps/render_pages/worksite/_conductors.pdf.erb
+++ b/app/views/ppsps/render_pages/worksite/_conductors.pdf.erb
@@ -10,7 +10,7 @@
       </div>
       <div class="flex-div-60 border grid">
         <div class="list-title">
-          <%= Machine.find(machine[0]).category %>
+          <%= Machine.find(machine[0]).machine_category.name %>
         </div>
         <div class="list-subtitle">
           <%= Machine.find(machine[0]).caces %>
