--- a/app/views/ppsps/render_pages/worksite/_infos.pdf.erb
+++ b/app/views/ppsps/render_pages/worksite/_infos.pdf.erb
@@ -21,6 +21,6 @@
 </div>
 <% unless @marker[:lng].nil? || @marker[:lat].nil? %>
   <div class="d-flex justify-content-center">
-    <img src="https://api.mapbox.com/styles/v1/mapbox/satellite-streets-v11/static/pin-s+ff7e67(<%= @marker[:lng] %>,<%= @marker[:lat] %>)/<%= @marker[:lng] %>,<%= @marker[:lat] %>,16/860x400?access_token=pk.eyJ1IjoibWF4ZW5jZWxlbm9pciIsImEiOiJja2RhNG9iMG8wZXY2MnptaDUzeDhidThpIn0.uNEuinv9hVcuU9VvtlOOsg" alt="map" id="map-mapbox">
+    <img src="https://api.mapbox.com/styles/v1/mapbox/satellite-streets-v11/static/pin-s+ff7e67(<%= @marker[:lng] %>,<%= @marker[:lat] %>)/<%= @marker[:lng] %>,<%= @marker[:lat] %>,16/860x400?access_token=<%= Rails.application.credentials.mapbox[:key] %>" alt="map" id="map-mapbox">
   </div>
 <% end %>
