--- a/app/assets/stylesheets/components/_icon.scss
+++ b/app/assets/stylesheets/components/_icon.scss
@@ -19,7 +19,7 @@
 }
 
 #loading {
-  background-image: url('gif-loading.gif');
+  background-image: image-url('gif-loading.gif');
   height: 150px;
   width: 200px;
   margin: auto;
