Test flatpicker on prod

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,7 @@
     <meta property="og:site_name" content="<%= meta_title %>" />
     <%= favicon_link_tag asset_path('logo/logo-ppsp.png') %>    
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload', defer: true %>
     <%= tinymce_assets %>
     <script type="text/javascript" src="/assets/tinymce.js"></script>
