--- a/app/assets/stylesheets/components/_calendar.scss
+++ b/app/assets/stylesheets/components/_calendar.scss
@@ -72,6 +72,24 @@
       color: $orange-dark;
     }
   }
+  .time {
+    input {
+      font-weight: 900;
+      text-align: center;
+      width: 150px;
+    }
+  }
+}
+
+.timetable-title {
+  text-align: center;
+  margin-bottom: 1em;
+  font-weight: 600;
+}
+
+.time-emphasis {
+  color: $orange;
+  font-weight: 900;
 }
 
 @media (max-width: 650px) {
