--- a/app/views/ppsps/render_pages/security/_list.pdf.erb
+++ b/app/views/ppsps/render_pages/security/_list.pdf.erb
@@ -2,13 +2,24 @@
   <h1 class="pdf-title mb-2">
     III. Disposition en matière de secours et d'évacuation
   </h1>
-  <h2 class="pdf-subtitle">
-    3.<%= @num_security %> Liste des SST
-    <% @num_security += 1 %>
-  </h2>
-  <% @lifesavers.each do |lifesaver| %>
-    <div>
-      <%= "#{lifesaver.first_name} #{lifesaver.last_name}" %>
+  <% if @ppsp.worksite.infirmary %>
+    <h2 class="pdf-subtitle">
+      3.<%= @num_security %> Infirmerie
+      <% @num_security += 1 %>
+    </h2>
+    <div class="infirmary">
+      <%= @ppsp.worksite.infirmary_text %>
     </div>
+  <% end %>
+  <% if @lifesavers.any? %>
+    <h2 class="pdf-subtitle">
+      3.<%= @num_security %> Liste des SST
+      <% @num_security += 1 %>
+    </h2>
+    <% @lifesavers.each do |lifesaver| %>
+      <div>
+        <%= "#{lifesaver.first_name} #{lifesaver.last_name}" %>
+      </div>
+    <% end %>
   <% end %>
 </div>
