--- a/app/views/ppsps/_form.html.erb
+++ b/app/views/ppsps/_form.html.erb
@@ -410,7 +410,15 @@
       <h3 class="col-md-6 offset-md-3 form-subtitle">
         3-1. Infirmerie de chantier
       </h3>
-      <p>A compléter</p>
+      <div class="col-md-6 offset-md-3">
+        <p>Le chantier implique-t-il une infirmerie sur place ?</p>
+        <%= f.simple_fields_for :worksite, @worksite do |w| %>
+          <%= w.input :infirmary, label: '&nbsp;'.html_safe, input_html: { class: 'checkbox-visual hidden', id:'infirmary' }  %>
+          <div class="hidden" id="infirmary-text">
+            <%= w.input :infirmary_text, label: 'Indiquer les informations sur cette infirmerie (localisation etc...)' %>
+          </div>
+        <% end %>
+      </div>
 
       <h3 class="col-md-6 offset-md-3 form-subtitle">
         3-2. Liste des SSP
