--- a/app/views/ppsps/render_pages/_emargement.pdf.erb
+++ b/app/views/ppsps/render_pages/_emargement.pdf.erb
@@ -2,11 +2,20 @@
   Feuille d'émargement
 </h1>
 <div class="flexbox mt-3">
-  <div class="flex-div-50 pdf-title">
-    Nom de l'agent
-  </div>
-  <div class="flex-div-50 pdf-title">
-    Signature
-  </div>
-  <div class="border-right"></div>
+  <table>
+    <thead>
+      <tr>
+        <th>Nom de l'agent</th>
+        <th>Signature</th>
+      </tr>
+    </thead>
+    <tbody>
+      <% 29.times do |n| %>
+        <tr>
+          <td></td>
+          <td></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
 </div>
