--- a/app/views/ppsps/render_pages/worksite/_date_effectifs.pdf.erb
+++ b/app/views/ppsps/render_pages/worksite/_date_effectifs.pdf.erb
@@ -1,19 +1,19 @@
-<div class="container-50">
+<h2 class="pdf-subtitle">
+    2.<%= @num_worksite %> Dates du chantier
+    <% @num_worksite += 1%>
+</h2>
+<div class="flexbox container-50">
+  <div class="flex-div-40">Date de début : </div><div class="flex-div-60"><%= @ppsp.worksite.start_date %></div>
+  <div class="flex-div-40">Date de fin : </div><div class="flex-div-60"><%= @ppsp.worksite.end_date %></div>
+  <div class="flex-div-40">Durée : </div><div class="flex-div-60"><%= "#{(@ppsp.worksite.end_date - @ppsp.worksite.start_date).to_i} jours" %></div>
+</div>
+<% if @ppsp.worksite.timetable_summer || @ppsp.worksite.timetable_winter %>
   <h2 class="pdf-subtitle">
-     2.<%= @num_worksite %> Dates du chantier
-      <% @num_worksite += 1%>
+    2.<%= @num_worksite %> Les horaires du chantier
+    <% @num_worksite += 1%>
   </h2>
-  <div class="flexbox">
-    <div class="flex-div-40">Date de début : </div><div class="flex-div-60"><%= @ppsp.worksite.start_date %></div>
-    <div class="flex-div-40">Date de fin : </div><div class="flex-div-60"><%= @ppsp.worksite.end_date %></div>
-    <div class="flex-div-40">Durée : </div><div class="flex-div-60"><%= "#{(@ppsp.worksite.end_date - @ppsp.worksite.start_date).to_i} jours" %></div>
-  </div>
-  <% if @ppsp.worksite.timetable_summer || @ppsp.worksite.timetable_winter %>
-    <h2 class="pdf-subtitle">
-      2.<%= @num_worksite %> Les horaires du chantier
-      <% @num_worksite += 1%>
-    </h2>
-    <% if @ppsp.worksite.timetable_summer %>
+  <% if @ppsp.worksite.timetable_summer %>
+    <div class="container-50">
       <div class='pdf-subsubtitle'>Horaires d'été</div>
       <div class="flexbox">
         <% ['Lundi', 'Mardi', 'Mercredi', 'Jeudi'].each do |day| %>
@@ -21,8 +21,10 @@
         <% end %>
         <div class="flex-div-40">Vendredi : </div><div class="flex-div-60"><%= @ppsp.worksite.timetable_summer_start_friday %> - <%= @ppsp.worksite.timetable_summer_end_friday %></div>
       </div>
-    <% end %>
-    <% if @ppsp.worksite.timetable_winter %>
+    </div>
+  <% end %>
+  <% if @ppsp.worksite.timetable_winter %>
+    <div class="container-50">
       <div class='pdf-subsubtitle'>Horaires d'hiver</div>
       <div class="flexbox">
         <% ['Lundi', 'Mardi', 'Mercredi', 'Jeudi'].each do |day| %>
@@ -30,34 +32,32 @@
         <% end %>
         <div class="flex-div-40">Vendredi: </div><div class="flex-div-60"><%= @ppsp.worksite.timetable_winter_start_friday %> - <%= @ppsp.worksite.timetable_winter_end_friday %></div>
       </div>
-    <% end %>
+    </div>
   <% end %>
+<% end %>
 
-  <h2 class="pdf-subtitle">
-    2.<%= @num_worksite %> Effectifs
+<h2 class="pdf-subtitle">
+  2.<%= @num_worksite %> Effectifs
+  <% @num_worksite += 1 %>
+</h2>
+<div class="flexbox container-50">
+  <div class="flex-div-60">Nombre de d'encadrants : </div><div class="flex-div-40"><%= @ppsp.worksite.num_responsible %></div>
+  <div class="flex-div-60">Nombre de conducteurs d'engins : </div><div class="flex-div-40"><%= @ppsp.worksite.num_conductor %></div>
+  <div class="flex-div-60">Nombre de compagnons : </div><div class="flex-div-40"><%= @ppsp.worksite.num_worker %></div>
+</div>
+
+<% if @ppsp.worksite.electrical_site %>
+  <div class="pdf-subtitle"> 
+    2.<%= @num_worksite %> Installation electrique
     <% @num_worksite += 1 %>
-  </h2>
-  <div class="flexbox">
-    <div class="flex-div-60">Nombre de d'encadrants : </div><div class="flex-div-40"><%= @ppsp.worksite.num_responsible %></div>
-    <div class="flex-div-60">Nombre de conducteurs d'engins : </div><div class="flex-div-40"><%= @ppsp.worksite.num_conductor %></div>
-    <div class="flex-div-60">Nombre de compagnons : </div><div class="flex-div-40"><%= @ppsp.worksite.num_worker %></div>
   </div>
-</div>
+  <p>Le chantier implique la mise en place d'installations électriques</p>
+<% end %>
 
-<div class="container-80">
-  <% if @ppsp.worksite.electrical_site %>
-    <div class="pdf-subtitle"> 
-      2.<%= @num_worksite %> Installation electrique
-      <% @num_worksite += 1 %>
-    </div>
-    <p>Le chantier implique la mise en place d'installations électriques</p>
-  <% end %>
-
-  <% if @ppsp.worksite.water_site %>
-    <div class="pdf-subtitle">
-      2.<%= @num_worksite %> Installation d'eau
-        <% @num_worksite += 1 %> 
-    </div>
-    <p>Le chantier implique la mise en place d'installations d'eau</p>
-  <% end %>
-</div>
+<% if @ppsp.worksite.water_site %>
+  <div class="pdf-subtitle">
+    2.<%= @num_worksite %> Installation d'eau
+      <% @num_worksite += 1 %> 
+  </div>
+  <p>Le chantier implique la mise en place d'installations d'eau</p>
+<% end %>
