--- a/app/assets/stylesheets/components/_container.scss
+++ b/app/assets/stylesheets/components/_container.scss
@@ -6,6 +6,10 @@
   margin-left: auto;
 }
 
+.container-grid {
+  padding: 40px 40px;
+}
+
 @media (min-width: 576px) {
   .container-app {
     max-width: 540px;
