--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -6,45 +6,58 @@
   justify-content: space-between;
   h2 {
     font-size: 24px;
+    text-align: left;
   }
 }
 
 .home-banner {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
+  min-height: 100vh;
+  background-position: center;
+  background-size: cover;
   position: relative;
-  min-height: 200px;
-  margin-bottom: 50px;
-  h1 {
-    font-size: 48px;
-    font-weight: bold;
-    margin-bottom: 0;
-  }
-  img {
-    width: 100px;
-    height: 100px;
-  }
-  .btn-orange {
-    width: fit-content;
-    font-size: 16px;
-  }
-  .btn-orange-ext {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.3)),
+    asset-url('home-background.jpg');
+  .container-banner {
     position: absolute;
-    top: 20px;
-    right: 20px;
-    width: fit-content;
-    font-size: 16px;
+    left: 40px;
+    top: 100px;
+    .banner-txt {
+      color: white;
+      h1 {
+        font-size: 80px;
+        font-weight: bold;
+        text-align: left;
+        margin-bottom: 1em;
+      }
+    }
+    .btn-orange {
+      width: fit-content;
+      font-size: 16px;
+    }
+    .btn-orange-ext {
+      position: absolute;
+      top: 20px;
+      right: 20px;
+      width: fit-content;
+      font-size: 16px;
+    }
   }
-  &:before {
-    content: '';
-    position: absolute;
-    width: 100%;
-    height: 200px;
-    background-color: rgba($blue-dark, 0.6);
-    clip-path: ellipse(100vw 280px at 50% -50%);
-    z-index: -1;
+}
+
+.container-form-home {
+  margin: 20%;
+  border-radius: 16px;
+  padding: 16px 32px;
+  background-color: white;
+}
+
+@media(max-width: 991px) {
+  .container-form-home {
+    margin: 10%;
+    border-radius: 16px;
+    padding: 16px 32px;
+    background-color: white;
   }
 }
 
@@ -93,7 +106,7 @@
 }
 
 .home-media {
-  height: 100%;
+  height: 800px;
   width: 100%;
   object-fit: scale-down;
 }
