--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,62 +1,82 @@
 <div class="container-home-page">
-  <div class="home-banner">
-    <%= link_to "Se connecter", new_user_session_path, class: "btn-orange-ext" %>
-    <h1>Obras</h1>
-    <%# <%= image_tag('logo-ppsp.png') %>
-    <h2>Créez votre Plan Particulier de Sécurité et de Protection de la Santé en toute simplicité</h2>
-   <a type="button" id="btn-display-modal" class="btn-orange" data-toggle="modal" data-target="#modal-contact">
-      Demander une démo
-    </a>
-  </div>
-  <div class="home-container-card">
-    <div class="home-card">
-      <div class="desc">
-        Création de PPSP au format PDF en toute simplicité
-      </div>
-      <div class="container-media">
-        <%= image_tag('home_PDF.png', class: 'home-media') %>
-      </div>
-    </div>
-    <div class="home-card">
-      <div class="desc">
-        Stockage centralisé de tous vos documents
-      </div>
-      <div class="container-media">
-        <%= video_tag('video-ppsps.mp4', class: 'home-media', autoplay: true, loop: true, muted: 'muted') %>
-      </div>
-    </div>
-    <div class="home-card">
-      <div class="desc">
-        Bases de données modifiables selon vos besoin
-      </div>
-      <div class="container-media">
-        <%= video_tag('video-database.mp4', class: 'home-media', autoplay: true, loop: true, muted: 'muted') %>
+  <section class="home-banner">
+    <div class="container-banner">
+      <div class='grid-home'>
+        <div class="banner-txt">
+          <h1>Obras</h1>
+          <h2>Créez votre Plan Particulier de Sécurité et de Protection de la Santé en toute simplicité</h2>
+        </div>
+        <div class='container-form-home '>
+          <h2>Demander une démo</h2>
+          <div class="form-group">
+            <label for="name">Name</label>
+            <input type="text" required class="form-control" id="name" name="name" placeholder="Jean-Michel Test"/>
+          </div>
+          <div class="form-group">
+            <label for="email">Email</label>
+            <input type="email" required pattern="(?:[a-z0-9!#$%&'*+/=?^_`{|}~-]+(?:\.[a-z0-9!#$%&'*+/=?^_`{|}~-]+)*|(?:[\x01-\x08\x0b\x0c\x0e-\x1f\x21\x23-\x5b\x5d-\x7f]|\\[\x01-\x09\x0b\x0c\x0e-\x7f])*)@(?:(?:[a-z0-9](?:[a-z0-9-]*[a-z0-9])?\.)+[a-z0-9](?:[a-z0-9-]*[a-z0-9])?|\[(?:(?:(2(5[0-5]|[0-4][0-9])|1[0-9][0-9]|[1-9]?[0-9]))\.){3}(?:(2(5[0-5]|[0-4][0-9])|1[0-9][0-9]|[1-9]?[0-9])|[a-z0-9-]*[a-z0-9]:(?:[\x01-\x08\x0b\x0c\x0e-\x1f\x21-\x5a\x53-\x7f]|\\[\x01-\x09\x0b\x0c\x0e-\x7f])+)\])" class="form-control" id="email" name="email" placeholder="JeanMichel-test@gmail.com"/>
+          </div>
+          <div class="form-group">
+            <label for="description">Raisons</label>
+            <textarea class="form-control" required rows="3" id="description" name="description" placeholder="Faciliter la rédaction de PPSPS au sein de mon entreprise de BTP" ></textarea>
+          </div>
+          <div class="d-flex justify-content-center">
+            <button type="submit" id="btn-send-mail" class="btn-orange">Demander une démo</button>
+          </div>
+        </div>
       </div>
     </div>
-  </div>
-  <div class="end-homepage">
-    <div class="separator">
+  </section>
+  <section class=container-grid>
+   <div class='grid-home'>
+      <%= image_tag('doc-ppsp-home.png') %>
+      <div class="description-text">
+        <h2>Le PPSPS qu'est ce que c'est ?</h2>
+        <p>
+          Le Plan Particulier de Sécurité et Protection de la Santé est un outil de travail qui est utilisé par le responsable de l’exécution, rédacteur du P.P.S.P.S., comme document de référence pendant les travaux, par les cadres ou le personnel de maîtrise chargés de la réalisation des travaux comme guide décrivant l’ensemble des moyens à mettre en œuvre pour chaque phase du chantier et par les opérateurs comme une aide à l’accomplissement de leurs tâches. Le Plan Particulier de Sécurité et de Protection de la Santé est établi conformément aux dispositions des articles R 238-31 et 32 et transmis au coordonnateur avant toute intervention sur le site. Pour l’établissement de son plan particulier, l’entreprise titulaire dispose d’un délai de 30 jours entre la réception du contrat signé par le maître d'ouvrage et le démarrage effectif des travaux. Ce délai est appelé période de préparation. Le coordonnateur transmet à chaque entrepreneur qui en fait la demande, les plans particuliers établis par les autres entrepreneurs.  
+        </p>
+      </div>
     </div>
+  </section>
+  <section id='services'>
+    <h2>Les services fournis par Obras</h2>
+    <div class="home-container-card">
+      <div class="home-card">
+        <div class="desc">
+          Création de PPSP au format PDF en toute simplicité
+        </div>
+        <div class="container-media">
+          <%= image_tag('home-ppsp.png') %>
+        </div>
+      </div>
+      <div class="home-card">
+        <div class="desc">
+          Stockage centralisé de tous vos documents
+        </div>
+        <div class="container-media">
+          <%= image_tag('home-stock-ppsps.png') %>
+        </div>
+      </div>
+      <div class="home-card">
+        <div class="desc">
+          Bases de données modifiables selon vos besoin
+        </div>
+        <div class="container-media">
+          <%= image_tag('home-database.png') %>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section id="interface">
+    <h2>Une interface simple et intuitive</h2>
+    <%= video_tag('video-ppsps.mp4', autoplay: true, loop: true, muted: 'muted', class: 'home-media') %>
+  </section>
+  <section class="end-homepage">
+    <div class="separator"></div>
     <h2>
       Ne perdez plus de temps avec la paperasse, laissez-nous nous en charger
     </h2>
-  </div>
-</div>
-
-<div class="modal fade rounded" id="modal-contact" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Saisir les informations ci-dessous</h5>
-        <a type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </a>
-      </div>
-      <div class="modal-body">
-        <%= render 'contact/mailer/form' %>
-      </div>
-    </div>
-  </div>
+  </section>
 </div>
 
 <% if sent %>
