--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,7 +4,7 @@
       <div class='grid-home'>
         <div class="banner-txt">
           <h1>Obras</h1>
-          <h2>Créez votre Plan Particulier de Sécurité et de Protection de la Santé en toute simplicité</h2>
+          <h2 class='mx-3'>Créez votre Plan Particulier de Sécurité et de Protection de la Santé en toute simplicité</h2>
         </div>
         <div class='container-form-home '>
           <h2>Demander une démo</h2>
@@ -26,6 +26,7 @@
         </div>
       </div>
     </div>
+    <div class="wave"></div>
   </section>
   <section class=container-grid>
    <div class='grid-home'>
@@ -38,7 +39,7 @@
       </div>
     </div>
   </section>
-  <section id='services'>
+  <section id='services' class="container-grid">
     <h2>Les services fournis par Obras</h2>
     <div class="home-container-card">
       <div class="home-card">
@@ -67,7 +68,7 @@
       </div>
     </div>
   </section>
-  <section id="interface">
+  <section id="interface" class="container-grid">
     <h2>Une interface simple et intuitive</h2>
     <%= video_tag('video-ppsps.mp4', autoplay: true, loop: true, muted: 'muted', class: 'home-media') %>
   </section>
