--- a/app/assets/stylesheets/components/_grid.scss
+++ b/app/assets/stylesheets/components/_grid.scss
@@ -15,6 +15,9 @@
   grid-template-columns: 1fr 1fr;
   -ms-grid-rows: auto;
   grid-template-rows: auto;
+  img {
+    margin: auto
+  }
 }
 
 @media(max-width: 991px) {
@@ -28,5 +31,8 @@
     grid-template-columns: 1fr;
     -ms-grid-rows: auto;
     grid-template-rows: auto;
+    img {
+      margin: auto
+    }
   }
 }
