--- a/app/views/ppsps/destroy_annexe.js.erb
+++ b/app/views/ppsps/destroy_annexe.js.erb
@@ -1,1 +1,1 @@
-document.getElementById("container-annexes").innerHTML = "<%= j(render 'ppsps/render_annexes') %>"
+document.getElementById("container-annexes").innerHTML = "<%= j(render 'ppsps/form/render_annexes') %>"
