--- a/app/assets/stylesheets/pdf.scss
+++ b/app/assets/stylesheets/pdf.scss
@@ -187,6 +187,11 @@
   margin-bottom: 8px;
 }
 
+.list-subline {
+  text-decoration: underline;
+  margin-bottom: 4px;
+}
+
 .border {
   border: 1px solid black;
 }
