--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -8,6 +8,9 @@
 @import 'font-awesome-sprockets';
 @import 'font-awesome';
 @import 'mapbox-gl/dist/mapbox-gl';
+@import 'dropzone/dist/min/dropzone.min.css';
+@import 'dropzone/dist/min/basic.min.css';
+
 
 // Your CSS partials
 @import 'components/index';
